add GSS dataset

--- a/chapter-11.ipynb
+++ b/chapter-11.ipynb
@@ -402,15 +402,9 @@
     "\n",
     "Now, for the new lines of numbers. The line \"Error (from model)\" was filled out because we now have a model that is not empty - there's an explanatory variable in it. SS, df, and MS mean the same thing for this model as they did in the empty model: they reflect the amount of error that is unexplained by the model, and how many degrees of freedom are left after estimating the model parameters (157 observations - 2 parameters = 155 df). This SS value is known as SS<sub>error</sub>. We calculate SS<sub>error</sub> in much the same way we calculate SS<sub>total</sub>, except this time we use residuals from the Sex model predictions instead of from the empty model. \n",
     "\n",
-    "The key thing to look for is whether or not error in the one-variable model is less than in the empty model. If so, that means it was valuable to add our variable! It helped explain extra variance in the outcome variable, enabling us to make better predictions and produce smaller residuals. This difference between the empty model and the full model is on the top line. SS<sub>model</sub> refers to how much of the error from the empty model was accounted for by adding a variable in the full model. There are two ways to calculate SS<sub>model</sub>. One is to simply subtract SS <sub>error</sub> (error from the Sex model predictions) from SS<sub>total</sub> (error around the mean, or the empty model). Thus:\n",
+    "The key thing to look for is whether or not error in the one-variable model is less than in the empty model. If so, that means it was valuable to add our variable! It helped explain extra variance in the outcome variable, enabling us to make better predictions and produce smaller residuals. This difference between the empty model and the full model is on the top line. SS<sub>model</sub> refers to how much of the error from the empty model was accounted for by adding a variable in the full model. To calculate SS<sub>model</sub>, we simply need to subtract SS<sub>error</sub> (error from the Sex model predictions) from SS<sub>total</sub> (error around the mean, or the empty model). Thus:\n",
     "\n",
-    "$$ SS_{model} = SS_{total} - SS_{error} $$\n",
-    "\n",
-    "To more directly calculate SS Model, we need to figure out how much error has been reduced by the Sex model in comparison to the empty model. This reduction in error is calculated by taking the distance from each person’s predicted score under the ```sex_model``` to their predicted score under the empty model, squaring it, and then totaling up the squares to get SS<sub>model</sub>. In equation form:\n",
-    "\n",
-    "$$ SS_{model} = \\sum_{i=1}^{N}(\\hat{Y}_{i-sex} - \\hat{Y}_{i-empty} )^2 $$\n",
-    "\n",
-    "This is very similar to the equation for SS in each model, except instead of subtracting predicted Y values from actual Y values, we are subtracting the different predictions from each other. \n"
+    "$$ SS_{model} = SS_{total} - SS_{error} $$\n"
    ]
   },
   {
@@ -461,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b77a7fa9",
+   "id": "cd86157c",
    "metadata": {},
    "source": [
     "## 11.9 A historical note - the t-test\n",
