remove ch13 notes

--- a/chapter-15.ipynb
+++ b/chapter-15.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "475ef2e9",
+   "id": "60ebc8a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7dad91f",
+   "id": "ff24d41c",
    "metadata": {},
    "source": [
     "## 15.1 Non-continuous outcomes\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ceb6c9d",
+   "id": "17f5af24",
    "metadata": {
     "scrolled": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbfc5d88",
+   "id": "1f4539f0",
    "metadata": {},
    "source": [
     "In this dataset are two variables ```Appetite``` and ```Hemoglobin```. In people with kidney disease, their body produces lower levels of hemoglobin, the molecule that carries oxygen around in the bloodstream. Concentrations of hemoglobin can be used as a measure of kidney disease severity. Let's say we want to use this variable to predict whether or not someone tends to have a good or poor appetite.\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc6e9553",
+   "id": "3c9a12d8",
    "metadata": {
     "scrolled": true
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e3ed134",
+   "id": "0a812241",
    "metadata": {},
    "source": [
     "So let's manually make it into a dummy variable ourselves: "
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9a7259f",
+   "id": "02092ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eca9df83",
+   "id": "28582db9",
    "metadata": {},
    "source": [
     "Now that we have the dummy (1 or 0) variable, let's use a scatterplot to look at the relationship between hemoglobin concentration and whether a patient has a good appetite."
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e5ee5b7",
+   "id": "b0eb3e2a",
    "metadata": {
     "scrolled": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af87996",
+   "id": "76006a01",
    "metadata": {},
    "source": [
     "From the plot, it does look as if the patients with lower hemoglobin are more likely to have poor appetite (```Appetite_dummy``` values of 0), whereas patients with higher hemoglobin tend to have good appetite (```Appetite_dummy``` values of 1).\n",
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dcca4e2",
+   "id": "717d898e",
    "metadata": {
     "scrolled": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d81fb03f",
+   "id": "5ca0a2f2",
    "metadata": {},
    "source": [
     "The linear regression line looks plausible, in that it predicts that people with higher hemoglobin levels are probably going to have a better appetite. \n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500a1d80",
+   "id": "794d43ec",
    "metadata": {},
    "source": [
     "## 15.2 Logit link function\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6426fd9a",
+   "id": "715a0f13",
    "metadata": {},
    "source": [
     "## 15.4 Interpretting a logistic model\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d0c8e4a",
+   "id": "5502b76c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c152d4c2",
+   "id": "c7403143",
    "metadata": {},
    "source": [
     "Thus, we can interpret the exponent of the coefficient b<sub>1</sub> = 0.02 as being the *ratio* of odds, for a one-unit change in predictor. In other words, e<sup>0.02</sup> = 1.02, so the odds of having kids is 1.02x great for each 1-year increase in someone's age. \n",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59d219b4",
+   "id": "10a9c426",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5579c03",
+   "id": "360eff24",
    "metadata": {},
    "source": [
     "Note that this is not the same as saying the *probability* of having kids is 1.02x greater for each 1-year increase in age. Probability is odds/(1+odds), so the probability that a 31-year-old has kids is:"
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d35a70f",
+   "id": "5aaeaeb4",
    "metadata": {
     "scrolled": true
    },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4953617",
+   "id": "ade84ae4",
    "metadata": {},
    "source": [
     "That's not the same thing as 1.02 times 0.7502601 (the probability of a 30-year-old having kids):"
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "241e136e",
+   "id": "92bfd033",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05e8abae",
+   "id": "e4951b07",
    "metadata": {},
    "source": [
     "In logistic regression, you have to be very careful with how you talk about the interpretations. 0.02 is the change in log odds for every one-unit increase in the predictor. e<sup>0.02</sup> is the multiplier of odds for every one-unit increase in the predictor. \n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5affed1a",
+   "id": "f4e6400d",
    "metadata": {},
    "source": [
     "## 15.5 Visualizing a logistic model\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "538376bb",
+   "id": "26ba14d4",
    "metadata": {
     "scrolled": true
    },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a4e8f63",
+   "id": "23fcf5a5",
    "metadata": {},
    "source": [
     "In a linear regression equation, the intercept coefficient controls where the line crosses the y-axis and the effect coefficient controls the steepness of the line's slope. In logistic regression it's a bit different. Since the raw outcome is bounded between 0 and 1, the line at X=0 will always cross the y-axis at Y=0 (the lowest possible value). \n",
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018f56e7",
+   "id": "58668f6b",
    "metadata": {},
    "source": [
     "## 15.6 Fitting logistic regression models\n",
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81ee1714",
+   "id": "2caace48",
    "metadata": {
     "scrolled": false
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22ffea6e",
+   "id": "06e2581b",
    "metadata": {},
    "source": [
     "And that's that! The intercept coefficient represents the log odds of having good appetite with a hemoglobin level of 0, and the effect coefficient represents the change in log odds for every one-point increase in hemoglobin. \n",
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4acdff6a",
+   "id": "b8dc2db7",
    "metadata": {
     "scrolled": true
    },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "853ea525",
+   "id": "c2641d4e",
    "metadata": {},
    "source": [
     "This means that there is a 66.8% chance that someone with a hemoglobin level of 10 would have a good appetite. \n",
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7910ef5",
+   "id": "7ae41a20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96e77be2",
+   "id": "b76e24c2",
    "metadata": {},
    "source": [
     "It is a character datatype with two possible values, \"Legal\" and \"Not legal\". It is binary, which means we can use logistic regression to predict someone's likelihood of supporting marijuana legalization or not. However we first need to recode it as a numeric dummy variable:"
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "747a1701",
+   "id": "570a81e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaf39d59",
+   "id": "858b8396",
    "metadata": {},
    "source": [
     "Our predictor of interest is in the variable ```rs_religious_preference```:"
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42c163d2",
+   "id": "251432e0",
    "metadata": {
     "scrolled": true
    },
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b37a246",
+   "id": "5412f0f0",
    "metadata": {},
    "source": [
     "This is a categorical variable with many levels, but some levels are very rare in the dataset. It will be hard to fit accurate coefficients for these levels, so let's only retain data for religions that have at least ten people representing them: "
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6bfd249",
+   "id": "8bc39605",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39b53eea",
+   "id": "caf4de05",
    "metadata": {},
    "source": [
     "Now we will fit our logistic regression model. Because ```rs_religious_preference``` is a many-leveled categorical variable there will be many coefficients fit in the model representing whether or not someone is in a specific religious category, but the formula for fitting it is just ```marijuana_dummy ~ rs_religious_preference```. "
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10f4ea0c",
+   "id": "8e97e9ac",
    "metadata": {
     "scrolled": true
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "496fd710",
+   "id": "547f5b77",
    "metadata": {},
    "source": [
     "Each coefficient in this table represents the change in log-odds of supporting marijuana legalization, based on whether or not someone is in that particular religious group. The intercept is the log-odds of supporting marijuana legalization for someone in the reference group, which is whatever religion is missing from this list of coefficients (in this case, Buddhism). \n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87eaaa6",
+   "id": "fbb787a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cccd30e",
+   "id": "88ed7085",
    "metadata": {},
    "source": [
     "There is about a 93% chance someone who is Buddhist will support marijuana legalization. \n",
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c20c30f3",
+   "id": "58ca1ab8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,20 +643,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcd66f0",
+   "id": "b3fe5647",
    "metadata": {},
    "source": [
     "An individual Catholic person is only about 58% likely to support marijuana legalization. \n",
     "\n",
-    "As with linear models, we can also make predictions for lots of datapoints at once. One twist though is that we have to choose whether to make predictions in probability units of the response (i.e. probability of supporting marijuana legalization), or predictions of the transformed response (logit) that is actually the outcome in a logistic model.\n",
-    "\n",
-    "By default ```predict()``` will make predictions in terms of log-odds, since that's what the logistic model outputs. But it's much easier to understand the consequences of your model in terms of probabilities. For that sort of prediction, you need to add ```type=\"response\"``` to the ```predict()``` function call. Here we predict the chance of marijuana legalization support for the first ten people in the dataset:"
+    "As with linear models, we can also make predictions for lots of datapoints at once. One twist though is that we have to choose whether to make predictions in probability units of the response (i.e. probability of supporting marijuana legalization), or predictions of the transformed response (logit) that is actually the outcome in a logistic model. By default ```predict()``` will make predictions in terms of log-odds, since that's what the logistic model outputs. But it's much easier to understand the consequences of your model in terms of probabilities. For that sort of prediction, you need to add ```type=\"response\"``` to the ```predict()``` function call. Here we predict the chance of marijuana legalization support for the first ten people in the dataset:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e42877e6",
+   "id": "20e7b487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2a274c1",
+   "id": "88d14cb3",
    "metadata": {},
    "source": [
     "## 15.6 Error in logistic models\n",
@@ -682,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1ac79fe",
+   "id": "decc368a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2de1f706",
+   "id": "6456f272",
    "metadata": {},
    "source": [
     "Look at the bottom of the output, where it says \"Null Deviance\" and \"Residual Deviance\". Null Deviance is the deviance in the empty or null form of a logistic model. \n",
@@ -723,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3be9a1a",
+   "id": "a159d4b4",
    "metadata": {},
    "source": [
     "Let's see how our marijuana legalization model does, by taking into account people's religious affiliation. We can access the null deviance and residual deviance directly from the model using ```model$null.deviance``` and ```model$deviance```, respectively.  "
@@ -732,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3006d9",
+   "id": "d9dd1c76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47f51c6d",
+   "id": "99664e13",
    "metadata": {},
    "source": [
     "Think of this PRD score as you would think of the PRE score in linear regression. This number suggests that accounting for people's religious affiliation explains about 3.67% of the deviance in predictions of marijuana legalization support. \n",
@@ -753,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98e798bd",
+   "id": "4041dfef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb61820f",
+   "id": "b38cb954",
    "metadata": {},
    "source": [
     "A pretty good model! Hemoglobin levels explain almost half the deviance in appetite predictions. "
@@ -770,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ede0b4d0",
+   "id": "292b4f93",
    "metadata": {},
    "source": [
     "## 15.7 Predicting categorical outcomes with more than two levels\n",
@@ -788,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "750e9a1e",
+   "id": "1cce56a1",
    "metadata": {},
    "source": [
     "## Chapter summary\n",
