--- a/chapter-16.ipynb
+++ b/chapter-16.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68e100ec",
+   "id": "705f4073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d49aa983",
+   "id": "035f3f91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f5ff249",
+   "id": "6c30e5dd",
    "metadata": {},
    "source": [
     "If we calculate the mean of this sample, we come up with one statistical estimate:"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e4b7ac3",
+   "id": "937742ce",
    "metadata": {
     "scrolled": true
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06038e7e",
+   "id": "2cb7d3aa",
    "metadata": {},
    "source": [
     "Compare that to the true \"population\" mean (mean of the entire ```Height``` variable):"
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d7faf8f",
+   "id": "1010c76c",
    "metadata": {
     "scrolled": true
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c4d2f45",
+   "id": "510c9c69",
    "metadata": {},
    "source": [
     "Our sample estimate isn't exactly the same, but it's pretty close. \n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcaba339",
+   "id": "bd5efad0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "282bd885",
+   "id": "03362de5",
    "metadata": {},
    "source": [
     "If we turn this set of means into a dataframe, we can plot a histogram and see how these means vary. We'll also add a vertical line at the population mean, to see how these sample means compare to it. "
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49e6ce8d",
+   "id": "8f235253",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ac0f0c",
+   "id": "617970e1",
    "metadata": {},
    "source": [
     "Compare the spread of this sampling distribution to the distribution of raw values in ```fingers$Height```:"
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c178af",
+   "id": "4120b3f3",
    "metadata": {
     "scrolled": true
    },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ab3a99d",
+   "id": "64a60443",
    "metadata": {},
    "source": [
     "There's variability among the sample means such that nearly all are different from the \"population\" mean, but any one sample mean gets pretty close to the population parameter. Further, if we take the mean of *means*: "
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a86f9e2",
+   "id": "0efb870a",
    "metadata": {
     "scrolled": true
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a7e5e20",
+   "id": "4b4490a5",
    "metadata": {},
    "source": [
     "It is nearly identical to the population parameter. \n",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51048724",
+   "id": "8628b87a",
    "metadata": {
     "scrolled": true
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58725c83",
+   "id": "91d90c03",
    "metadata": {},
    "source": [
     "This sampling distribution is wider than the first - on average, each sample mean is farther away from the true population parameter. However, the mean of *means* is still quite close:"
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b72e2831",
+   "id": "3b4f5969",
    "metadata": {
     "scrolled": true
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ed18bb5",
+   "id": "19feee91",
    "metadata": {},
    "source": [
     "Finally, let's take this exercise to the extreme with a sample size that is as small as possible. Modify the code to draw 1000 samples of only 1 data point each. "
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "850c019a",
+   "id": "6a12892a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe15fad1",
+   "id": "1a11aeb9",
    "metadata": {},
    "source": [
     "This reveals a sampling distribution that approaches the same shape as the population distribution, since each \"sample\" is just one data point from the population. And yet, when comparing the mean of this wide sampling distribution to the population mean:"
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f80e76f4",
+   "id": "93c5eb7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a2cfab2",
+   "id": "443b890d",
    "metadata": {},
    "source": [
     "Based on this demonstration, we can see that if you only have a few observations in a sample, any one sample mean is unlikely to be inaccurate: if you replicate a small experiment and recalculate the mean you’ll get a very different answer. The sampling distribution is quite wide. This is why statistical answers from studies with a small sample can be misleading.\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8345e22f",
+   "id": "48e468ca",
    "metadata": {},
    "source": [
     "## 16.4 The Central Limit Theorem\n",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4819a1f6",
+   "id": "f48b52a7",
    "metadata": {},
    "source": [
     "## 16.5 Estimating population parameters\n",
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "595e0b83",
+   "id": "f6e7ef30",
    "metadata": {},
    "source": [
     "## 16.6 Sampling distributions of model outputs\n",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c69d1f75",
+   "id": "aa06914e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b58548c1",
+   "id": "c9a49eda",
    "metadata": {},
    "source": [
     "The estimate for b<sub>1</sub> is 0.96, indicating that a regression line best fits *these data* with minimal error if it has a slope of 0.96. For every one-inch increase in someone's height, we'd predict that their thumb length would be 0.96mm longer. But now let's treat ```fingers$Height``` as a population again, and bootstrap some separate samples in which we fit a model for each. We'll use the function ```sample_n()``` from the ```dplyr``` package in order to sample entire rows of a data frame. "
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac80b9d",
+   "id": "16ba1408",
    "metadata": {
     "scrolled": true
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa2d070",
+   "id": "1f05f31a",
    "metadata": {},
    "source": [
     "From this, we can clearly see that models built on different data will come up with different coefficient estimates. Some will say that ```Thumb``` and ```Height``` will relate to each other in much the same way as they do in the \"population\": "
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba9a326",
+   "id": "23e1933f",
    "metadata": {
     "scrolled": true
    },
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c71d75c0",
+   "id": "0b22f1d5",
    "metadata": {},
    "source": [
     "But others will over-estimate the model slope:"
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d2071a7",
+   "id": "a27217e4",
    "metadata": {
     "scrolled": true
    },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7bfda81",
+   "id": "98fcaabf",
    "metadata": {},
    "source": [
     "While still others will even flip the direction of the effect, such that we predict someone's thumb would be *shorter* for each one-inch increase in height: "
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e467e77d",
+   "id": "7695ba95",
    "metadata": {
     "scrolled": true
    },
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6221369e",
+   "id": "59529b38",
    "metadata": {},
    "source": [
     "This tells us that our estimate of the coefficient may not be the true population coefficient, and is likely to vary around the population parameter by the amount of the standard error. The equation for the standard error of a regression coefficient is a more complicated equation than those for the standard error of the mean so we won't make you learn it, but it is again a function of sample size. \n",
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f8dc99",
+   "id": "a9e0767c",
    "metadata": {
     "scrolled": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7673df9d",
+   "id": "61d8a3d1",
    "metadata": {},
    "source": [
     "Sometimes the model, by taking ```Height``` into account, does a very good job of predicting thumb lengths. And sometimes it does next to nothing for our predictions."
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d59f0c5",
+   "id": "34091a3b",
    "metadata": {
     "scrolled": true
    },
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2496448",
+   "id": "b70f887a",
    "metadata": {},
    "source": [
     "So the formula for CI<sub>70</sub> would be the same as the formula for CI<sub>95</sub> except that we’d use 1.04 as our magic number rather than 1.96. This would be a narrower range of values than the CI<sub>95</sub>, because to increase our confidence that the population parameter is covered by our interval, we need to include more possibilities (a larger range) in that interval. \n",
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7292461d",
+   "id": "9a379ffb",
    "metadata": {
     "scrolled": true
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b617fc1",
+   "id": "c03ee796",
    "metadata": {},
    "source": [
     "This gives you a lot more information about a model than just its coefficients. For our purposes right now, look at the table under the heading \"Coefficients:\". Each row is for each parameter estimated by our model - the intercept (b<sub>0</sub>) and the effect of ```Height``` (b<sub>1</sub>). The first column, \"Estimate\" shows you the same coefficient estimate as you would get from simply typing the model object name into the console window. \n",
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f9d5f3b",
+   "id": "decfcb32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,15 +771,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "705dfac7",
+   "id": "5213fb00",
    "metadata": {},
    "source": [
-    "When reporting these intervals in text, we usually include the coefficient estimate followed by the 95% CI in brackets. I.e., \"the estimate of the effect of Height is b<sub>1</sub> = 0.9619, 95% CI [0.603, 1.321]\"."
+    "When reporting these intervals in text, we usually include the coefficient estimate followed by the 95% CI in brackets. I.e., \"the estimate of the effect of Height is b<sub>1</sub> = 0.9619, 95% CI [0.603, 1.321]\".\n",
+    "\n",
+    "One thing you should notice is that the confidence interval for b<sub>1</sub> spans only positive numbers, and doesn't intersect with 0. This means that, even if the true effect &beta;<sub>1</sub> is not the same as our estimate, we are quite confident that it is at least a positive number - that as height values go up, estimates of thumb length will also go up. Hold onto this thought for next chapter."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8e49c59",
+   "id": "c517e64b",
    "metadata": {},
    "source": [
     "### Pitfalls of interpreting confidence intervals\n",
@@ -798,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e1656c",
+   "id": "90c0d7d1",
    "metadata": {},
    "source": [
     "## Chapter summary\n",
